--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -1,14 +1,29 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import { getCollection } from 'astro:content';
+import BaseHead from '../components/BaseHead.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
+import BlogPostFull from '../components/BlogPostFull.astro';
 
-const posts = await Astro.glob('./posts/*.md');
+const posts = (await getCollection('blog')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
 ---
-<BaseLayout pageTitle="Blog">
-  {posts.map((post) => (
-    <article>
-      <h2>{post.frontmatter.title}</h2>
-      <p>By {post.frontmatter.author} on {post.frontmatter.date}</p>
-      <post.Content />
-    </article>
-  ))}
-</BaseLayout>
+
+<!doctype html>
+<html lang="en">
+	<head>
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+	</head>
+	<body>
+		<Header />
+		<main>
+			<div class="post-list">
+				{posts.map(post => <BlogPostFull post={post} />)}
+			</div>
+		</main>
+		<Footer />
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	</body>
+</html>
